[package]
name = "rustprojects"
version = "0.1.0"
edition = "2021"

[package.metadata.pyo3]
python-sys-executable = "C:/your_path_to/Python312/python.exe"
PYO3_PYTHON = "C:/your_path_to/Python312/python.exe"

[dependencies]
egui = "0.28.1"
eframe = "0.28.1"
env_logger = "0.11.5"
egui_extras = "0.28.1"
llm = "0.1.1"
rand = "0.8.5"

[dependencies.pyo3]
version = "0.22.2"
features = ["extension-module"]
